fix: 한글화 작업완료 ( 로그인, 사이드바 )

--- a/webapp/channels/src/i18n/ko.json
+++ b/webapp/channels/src/i18n/ko.json
@@ -18,7 +18,7 @@
   "about.teamEditionSt": "모든 팀 커뮤니케이션을 한 곳에 모아 빠르게 찾고, 공유하세요.",
   "about.teamEditiont0": "팀 에디션",
   "about.teamEditiont1": "엔터프라이즈 에디션",
-  "about.title": "{appTitle}에 대하여",
+  "about.title": "ILS 메신저에 대하여",
   "about.tos": "이용 약관",
   "about.version": "Mattermost 버전:",
   "access_history.title": "접근 기록",
@@ -2190,7 +2190,7 @@
   "channel_header.unmute": "채널 알림 끄기",
   "channel_header.userHelpGuide": "도움말",
   "channel_header.viewMembers": "회원 보기",
-  "channel_invite.addNewMembers": "{channel}에 새로운 구성원 추가하기",
+  "channel_invite.addNewMembers": "{channel}에 새로운 멤버 추가하기",
   "channel_loader.postedImage": " uploaded an image",
   "channel_loader.socketError": "Mattermost에 연결이 안되므로 연결 상태를 확인하십시오. 문제가 지속되면 관리자에게 [WebSocket 포트 확인](!https://docs.mattermost.com/install/troubleshooting.html#please-check-connection-mattermost-unreachable-if-issue-persists-ask-administrator-to-check-websocket-port)을 문의하십시오.",
   "channel_loader.someone": "누군가",
@@ -2207,7 +2207,7 @@
   "channel_members_modal.members": " 구성원",
   "channel_modal.cancel": "취소",
   "channel_modal.createNew": "채널 만들기",
-  "channel_modal.modalTitle": "새 채널",
+  "channel_modal.modalTitle": "새 대화방",
   "channel_notifications.allActivity": "모든 활동",
   "channel_notifications.globalDefault": "전역 기본 설정 ({notifyLevel})",
   "channel_notifications.ignoreChannelMentions": "@channel, @here and @all 를 무시합니다",
@@ -2311,7 +2311,7 @@
   "convert_channel.question3": "정말 **{display_name}** 채널을 비공개 채널로 변환하시겠어요?",
   "convert_channel.title": "{display_name} 채널을 비공개 채널로 변환하시겠어요?",
   "copy_url_context_menu.getChannelLink": "링크 복사",
-  "create_category_modal.create": "Create",
+  "create_category_modal.create": "생성",
   "create_comment.addComment": "이 글타래에 답글 달기...",
   "create_comment.commentTitle": "답글",
   "create_post.comment": "답글",
@@ -2657,8 +2657,8 @@
   "interactive_dialog.element.optional": "(선택사항)",
   "interactive_dialog.submit": "확인",
   "interactive_dialog.submitting": "제출 중...",
-  "intro_messages.DM": "{teammate}님과의 개인 메시지가 시작되었습니다.\n개인 메시지나 여기서 공유된 파일들은 외부에서 볼 수 없습니다.",
-  "intro_messages.GM": "{names}와 그룹 메시지의 시작입니다.\n개인 메시지나 여기서 공유된 파일들은 외부에서 보여지지 않습니다.",
+  "intro_messages.DM": "{teammate}님과의 대화가 시작되었습니다.\n개인 메시지나 여기서 공유된 파일들은 외부에서 볼 수 없습니다.",
+  "intro_messages.GM": "{names}와 그룹 대화가 시작되었습니다.\n개인 메시지나 여기서 공유된 파일들은 외부에서 볼 수 없습니다.",
   "intro_messages.addGroupsToTeam": "이 팀에 다른 그룹을 추가하세요.",
   "intro_messages.anyMember": " 모든 회원이 채널에 가입하고 글을 읽을 수 있습니다.",
   "intro_messages.beginning": "{name}의 시작",
@@ -2742,7 +2742,7 @@
   "login.office365": "Office 365",
   "login.or": "또는",
   "login.passwordChanged": " 패스워드가 성공적으로 변경되었습니다.",
-  "login.placeholderOr": " or ",
+  "login.placeholderOr": " 또는 ",
   "login.session_expired": "세션이 만료되었습니다. 다시 로그인 하세요.",
   "login.session_expired.title": "* {siteName} - 세션 만료됨",
   "login.terms_rejected": "{siteName}에 접속하기 전에 서비스 약관을 동의해야 합니다. 더 자세한 내용은 시스템 관리자한테 문의하세요.",
@@ -2786,7 +2786,7 @@
   "modal.manual_status.button_away": "예, 상태를 \"자리 비움\"으로 설정",
   "modal.manual_status.button_dnd": "예, 내 상태를 \"방해금지\"로 설정해주세요.",
   "modal.manual_status.button_offline": "예, 상태를 \"자리 비움\"으로 설정",
-  "modal.manual_status.button_online": "예, 상태를 \"자리 비움\"으로 설정",
+  "modal.manual_status.button_online": "예, 상태를 \"온라인\"으로 설정",
   "modal.manual_status.cancel_": "아니요, \"{status}\"로 유지합니다.",
   "modal.manual_status.cancel_away": "아니요, \"자리 비움\"으로 상태를 유지합니다.",
   "modal.manual_status.cancel_dnd": "아니요, \"방해 금지\"로 유지합니다.",
@@ -2810,7 +2810,7 @@
   "more_direct_channels.directchannel.deactivated": "{displayname} - 비활성화됨",
   "more_direct_channels.directchannel.you": "{displayname} (당신)",
   "more_direct_channels.new_convo_note": "새로운 대화가 시작됩니다. 많은 사람을 추가해야 하는 경우, 비공개 채널을 만드는 것이 좋습니다.",
-  "more_direct_channels.title": "개인 메시지",
+  "more_direct_channels.title": "개인방",
   "msg_typing.areTyping": "{users}, {last}(이)가 입력중입니다...",
   "msg_typing.isTyping": "{user}(이)가 입력중입니다...",
   "multiselect.add": "추가",
@@ -2821,8 +2821,8 @@
   "multiselect.go": "시작",
   "multiselect.list.notFound": "사용자를 찾을 수 없습니다 :(",
   "multiselect.loading": "로딩중...",
-  "multiselect.numGroupsRemaining": "↑↓키로 탐색하고, ↵키로 선택합니다. {num, number} 명 이상 {num, plural, one {그룹} other {그룹}}을 추가할 수 있습니다. ",
-  "multiselect.numPeopleRemaining": "↑↓키로 탐색하고, ↵키로 선택합니다. {num, number} 명 이상 {num, plural, one {사람} other {명}}을 추가할 수 있습니다. ",
+  "multiselect.numGroupsRemaining": "[↑↓: 이동, ↵: 선택] {num, number} 명 이상 추가할 수 있습니다. ",
+  "multiselect.numPeopleRemaining": "[↑↓: 이동, ↵: 선택] {num, number} 명 이상 추가할 수 있습니다. ",
   "multiselect.numRemaining": "{num, number}명 더 추가할 수 있습니다.",
   "multiselect.placeholder": "사용자를 검색하고 추가하세요.",
   "multiselect.selectChannels": "↑↓키로 탐색하고, ↵키로 선택합니다.",
@@ -2832,7 +2832,7 @@
   "navbar.preferences": "알림 설정",
   "navbar.toggle2": "사이드바 토글",
   "navbar.viewPinnedPosts": "공지사항 보기",
-  "navbar_dropdown.about": "{appTitle} 정보",
+  "navbar_dropdown.about": "ILS 메신저 정보",
   "navbar_dropdown.addGroupsToTeam": "팀에 그룹 추가",
   "navbar_dropdown.console": "관리자 도구",
   "navbar_dropdown.create": "팀 생성하기",
@@ -2844,7 +2844,7 @@
   "navbar_dropdown.leave": "팀 떠나기",
   "navbar_dropdown.logout": "로그아웃",
   "navbar_dropdown.manageGroups": "역할 관리",
-  "navbar_dropdown.manageMembers": "회원 관리",
+  "navbar_dropdown.manageMembers": "멤버 보기",
   "navbar_dropdown.marketplace": "플러그인 마켓플레이스",
   "navbar_dropdown.menuAriaLabel": "메인 메뉴",
   "navbar_dropdown.nativeApps": "애플리케이션 다운로드",
@@ -2920,9 +2920,9 @@
   "posts_view.newMsg": "새로운 메시지",
   "pricing_modal.briefing.unlimitedPlaybookRuns": "무제한 플레이북과 실행",
   "pricing_modal.extra_briefing.enterprise.playBookAnalytics": "플레이북 분석 대시보드",
-  "quick_switch_modal.help_mobile": "채널을 찾기 위해 입력해 주세요.",
-  "quick_switch_modal.help_no_team": "채널을 찾기 위해 입력해 주세요. ↑↓ 키로 탐색, ↵ 키로 선택, ESC로 종료.",
-  "quick_switch_modal.switchChannels": "채널 변경",
+  "quick_switch_modal.help_mobile": "대화방을 찾기 위해 입력해 주세요.",
+  "quick_switch_modal.help_no_team": "대화방을 찾기 위해 입력해 주세요. ↑↓ 키로 탐색, ↵ 키로 선택, ESC로 종료.",
+  "quick_switch_modal.switchChannels": "대화방 변경",
   "reaction.add.ariaLabel": "반응 추가",
   "reaction.clickToAdd": "(추가하려면 클릭)",
   "reaction.clickToRemove": "(제거하려면 클릭)",
@@ -3053,24 +3053,25 @@
   "shortcuts.team_nav.switcher.mac": "특정 팀으로 전환: \tCtrl|Alt|[1-9]",
   "sidebar.directchannel.you": "{displayname} (당신)",
   "sidebar.team_select": "{siteName} - 팀에 참여하기",
-  "sidebar.types.channels": "채널",
-  "sidebar.types.direct_messages": "개인 메시지",
+  "sidebar.types.channels": "단체방",
+  "sidebar.types.direct_messages": "개인방",
   "sidebar.types.unreads": "읽지 않음",
   "sidebar.unreads": "읽지 않은 글 더보기",
   "sidebar_left.add_channel_dropdown.browseChannels": "채널 보기",
   "sidebar_left.add_channel_dropdown.browseOrCreateChannels": "채널을 탐색하거나 생성",
-  "sidebar_left.add_channel_dropdown.createCategory": "새로운 카테고리 생성",
-  "sidebar_left.add_channel_dropdown.createNewChannel": "새로운 채널 생성",
+  "sidebar_left.add_channel_dropdown.createCategory": "카테고리 만들기",
+  "sidebar_left.add_channel_dropdown.createNewChannel": "단체방 만들기",
   "sidebar_left.channel_filter.showAllChannels": "모든 채널 보기",
+  "sidebar_left.channel_filter.filterByUnread": "읽지 않은 채널 보기",
   "sidebar_left.channel_navigator.channelSwitcherLabel": "빠른 채널 전환기능",
   "sidebar_left.channel_navigator.goBackLabel": "돌아가기",
-  "sidebar_left.channel_navigator.jumpTo": "채널 탐색",
-  "sidebar_left.sidebar_channel_menu.addMembers": "구성원 추가",
+  "sidebar_left.channel_navigator.jumpTo": "이동...",
+  "sidebar_left.sidebar_channel_menu.addMembers": "멤버 추가",
   "sidebar_left.sidebar_channel_menu.copyLink": "링크 복사",
   "sidebar_left.sidebar_channel_menu.favoriteChannel": "즐겨찾기",
-  "sidebar_left.sidebar_channel_menu.leaveChannel": "채널 떠나기",
-  "sidebar_left.sidebar_channel_menu.muteChannel": "채널 알림 끄기",
-  "sidebar_left.sidebar_channel_menu.unmuteChannel": "채널 알림 끄기",
+  "sidebar_left.sidebar_channel_menu.leaveChannel": "단체방 떠나기",
+  "sidebar_left.sidebar_channel_menu.muteChannel": "단체방 알림 끄기",
+  "sidebar_left.sidebar_channel_menu.unmuteChannel": "단체방 알림 켜기",
   "sidebar_right_menu.console": "관리자 도구",
   "sidebar_right_menu.flagged": "중요 메시지",
   "sidebar_right_menu.recentMentions": "최근 멘션",
@@ -3127,7 +3128,7 @@
   "team.button.tooltip.mac": "⌘ ⌥ {order}",
   "team_channel_settings.group.group_user_row.numberOfGroups": "{amount, number} {amount, plural, one {Group} 그외 {Groups}}",
   "team_member_modal.invitePeople": "초대하기",
-  "team_member_modal.members": "{team} 회원",
+  "team_member_modal.members": "{team} 멤버",
   "team_members_dropdown.confirmDemoteRoleTitle": "Confirm demotion from System Admin role",
   "team_members_dropdown.confirmDemotionCmd": "platform roles system_admin {username}",
   "team_members_dropdown.guest": "게스트",
@@ -3472,7 +3473,7 @@
   "user.settings.sidebar.limitVisibleGMsDMsTitle": "개인 메시지 표시 개수",
   "user.settings.sidebar.off": "끄기",
   "user.settings.sidebar.on": "켜기",
-  "user.settings.sidebar.recent": "최근 활동",
+  "user.settings.sidebar.recent": "시간순",
   "user.settings.sidebar.showUnreadsCategoryDesc": "기능 활성화 시, 사이드바에서 모든 읽지 않은 채널과 개인 메시지를 따로 모아볼 수 있습니다.",
   "user.settings.sidebar.showUnreadsCategoryTitle": "읽지 않은 채널 모아보기",
   "user.settings.sidebar.sortAlpha": "알파벳순",
@@ -3536,5 +3537,64 @@
   "widgets.users_emails_input.loading": "불러오는 중",
   "widgets.users_emails_input.no_user_found_matching": "**{text}**와 일치하는 사람이 없습니다, 초대할 이메일을 입력하세요",
   "widgets.users_emails_input.valid_email": "**{email}** 추가",
-  "yourcomputer": "당신의 컴퓨터"
+  "yourcomputer": "당신의 컴퓨터",
+
+  "login.logIn": "로그인",
+  "login.cardtitle": "로그인",
+  "login.logingIn": "로그인 중...",
+
+  "widget.passwordInput.password": "비밀번호",
+  "modal.manual_status.cancel_offline": "아니요, 상태를 '오프라인'으로 유지",
+  "sidebar.openDirectMessage": "개인방 만들기",
+  "sidebar.types.favorites": "즐겨찾기",
+  "sidebar_left.sidebar_channel_menu.markAsUnread": "안 읽음 표시",
+  "sidebar_left.sidebar_channel_menu.unfavoriteChannel": "즐겨찾기 해제",
+  "sidebar_left.sidebar_channel_menu.muteConversation": "알림 끄기",
+  "sidebar_left.sidebar_channel_menu.unmuteConversation": "알림 켜기",
+  "sidebar_left.sidebar_channel_menu.moveTo": "이동",
+  "sidebar_left.sidebar_channel_menu.favorites": "즐겨찾기",
+  "sidebar_left.sidebar_channel_menu.moveToNewCategory": "카테고리 생성",
+  "search_item.file_tag.direct_message": "개인 메시지",
+  "login.invalidCredentials": "이메일/사용자 이름 또는 비밀번호가 유효하지 않습니다.",
+  "suggestion.mention.recent.channels": "최근 대화",
+    "sidebar_left.sidebar_category.newLabel": "신규",
+    "sidebar_left.sidebar_category_menu.editCategory": "카테고리 옵션",
+    "sidebar_left.sidebar_category_menu.muteCategory": "카테고리 알림 끄기",
+    "sidebar_left.sidebar_category_menu.unmuteCategory": "카테고리 알림 켜기",
+    "sidebar_left.sidebar_category.newDropBoxLabel": "대화방을 여기로 드래그하세요",
+    "sidebar_left.sidebar_category_menu.renameCategory": "카테고리 이름 수정",
+    "sidebar_left.sidebar_category_menu.deleteCategory": "카테고리 삭제",
+    "sidebar.show": "보기",
+    "sidebar.allDirectMessages": "전체",
+    "sidebar.sort": "정렬",
+    "sidebar.sortedByRecencyLabel": "시간순",
+    "sidebar.sortedManually": "수동",
+    "sidebar_left.sidebar_category_menu.createCategory": "카테고리 생성",
+    "sidebar_left.sidebar_channel_menu.leaveConversation": "대화방 닫기",
+    "filtered_user_list.countTotal": "총 {total, number}명 중 {count, number}명",
+    "filtered_user_list.countTotalPage": "총 {total, number}명 중 {startCount, number} - {endCount, number}명",
+    "channel_modal.name.label": "대화방 이름",
+    "channel_modal.name.placeholder": "예시: \"버그\", \"마케팅\", \"고객지원\"",
+    "url_input.buttonLabel.edit": "편집",
+    "url_input.buttonLabel.done": "완료",
+    "change_url.shorter": "URL은 최대 64자여야 합니다.",
+    "change_url.longer": "URL은 1자 이상이어야 합니다.",
+    "change_url.noSpecialChars": "URL은 소문자, 영어, -, _만 사용할 수 있습니다.",
+    "change_url.invalidDirectMessage": "URL에는 사용자 ID가 허용되지 않습니다.",
+    "widget.input.required": "필수 항목입니다.",
+    "channel_modal.name.longer": "대화방 이름은 1자 이상이어야 합니다.",
+    "channel_modal.name.shorter": "대화방 이름은 최대 64자여야 합니다.",
+    "channel_modal.type.private.title": "비공개 대화방",
+    "channel_modal.type.private.description": "초대받은 멤버만 참여할 수 있습니다",
+    "channel_modal.purpose.info": "이 대화방은 이렇게 사용되어야 합니다.",
+    "channel_modal.purpose.placeholder": "대화방 설명 (선택사항)",
+    "multiselect.numMembers": "{memberOptions, number} / {totalCount, number} 명",
+    "create_category_modal.createCategory": "카테고리 만들기",
+    "edit_category_modal.placeholder": "카테고리 이름",
+    "edit_category_modal.helpText": "대화방을 카테고리로 드래그하여 구성합니다",
+    "rename_category_modal.renameCategory": "카테고리 이름 수정",
+    "rename_category_modal.rename": "저장",
+    "delete_category_modal.deleteCategory": "카테고리를 삭제하시겠습니까 ?",
+    "delete_category_modal.helpText": "[**{category_name}**] 카테고리 안에 속한 대화방은 단체방 혹은 개인방으로 이동됩니다. 대화방은 삭제되지 않습니다.",
+    "channel_invite.no_options_message": "사용자를 찾을 수 없습니다 :("
 }
