fix: 한글화 작업완료 ( 상단 헤더, 검색창, 검색 결과 )

--- a/webapp/channels/src/i18n/ko.json
+++ b/webapp/channels/src/i18n/ko.json
@@ -2342,12 +2342,15 @@
   "custom_emoji.header": "커스텀 이모지",
   "custom_status.expiry.time_picker.title": "시간",
   "custom_status.expiry.until": "까지",
-  "custom_status.expiry_dropdown.dont_clear": "삭제 금지",
+  "custom_status.expiry_dropdown.clear_after": "유지 기간",
+  "custom_status.expiry_dropdown.dont_clear": "기간 없음",
   "custom_status.expiry_dropdown.four_hours": "4 시간",
   "custom_status.expiry_dropdown.one_hour": "1 시간",
   "custom_status.expiry_dropdown.thirty_minutes": "30 분",
   "custom_status.expiry_dropdown.this_week": "이번주",
   "custom_status.expiry_dropdown.today": "오늘",
+  "custom_status.expiry_dropdown.date_and_time": "사용자 지정",
+  "custom_status.expiry_dropdown.choose_date_and_time": "사용자 지정",
   "custom_status.modal_cancel": "상태 삭제",
   "custom_status.modal_confirm": "상태 설정",
   "custom_status.set_status": "상태 설정",
@@ -2853,7 +2856,6 @@
   "navbar_dropdown.switchTo": "팀 변경: ",
   "navbar_dropdown.teamSettings": "팀 설정",
   "navbar_dropdown.viewMembers": "회원 보기",
-  "no_results.channel_search.subtitle": "Check the spelling or try another search.",
   "notification.dm": "개인 메시지",
   "notify_all.confirm": "확인",
   "notify_all.question": "@all, @channel 을 사용하면 {totalMembers} 명의 사람들에게 알림을 보냅니다. 정말 맨션을 사용하시겠습니까?",
@@ -2963,7 +2965,7 @@
   "rhs_header.collapseSidebarTooltip": "사이드바 접기",
   "rhs_header.collapseSidebarTooltip.icon": "사이드바 아이콘 접기",
   "rhs_header.details": "Thread",
-  "rhs_header.expandSidebarTooltip": "Expand the sidebar",
+  "rhs_header.expandSidebarTooltip": "사이드바 확장",
   "rhs_header.expandSidebarTooltip.icon": "Expand the sidebar icon",
   "rhs_root.mobile.add_reaction": "반응 추가",
   "rhs_root.mobile.flag": "중요 지정",
@@ -2977,7 +2979,6 @@
   "search_header.title5": "추가정보",
   "search_item.channelArchived": "보관됨",
   "search_item.jump": "바로가기",
-  "search_list_option.on": "Messages on a date",
   "select_team.icon": "팀 아이콘 선택",
   "select_team.join.icon": "팀 아이콘 가입",
   "select_team.private.icon": "비공개 팀",
@@ -3542,7 +3543,6 @@
   "login.logIn": "로그인",
   "login.cardtitle": "로그인",
   "login.logingIn": "로그인 중...",
-
   "widget.passwordInput.password": "비밀번호",
   "modal.manual_status.cancel_offline": "아니요, 상태를 '오프라인'으로 유지",
   "sidebar.openDirectMessage": "개인방 만들기",
@@ -3554,47 +3554,139 @@
   "sidebar_left.sidebar_channel_menu.moveTo": "이동",
   "sidebar_left.sidebar_channel_menu.favorites": "즐겨찾기",
   "sidebar_left.sidebar_channel_menu.moveToNewCategory": "카테고리 생성",
+  "sidebar_left.sidebar_channel_menu.editChannel": "옵션",
   "search_item.file_tag.direct_message": "개인 메시지",
   "login.invalidCredentials": "이메일/사용자 이름 또는 비밀번호가 유효하지 않습니다.",
   "suggestion.mention.recent.channels": "최근 대화",
-    "sidebar_left.sidebar_category.newLabel": "신규",
-    "sidebar_left.sidebar_category_menu.editCategory": "카테고리 옵션",
-    "sidebar_left.sidebar_category_menu.muteCategory": "카테고리 알림 끄기",
-    "sidebar_left.sidebar_category_menu.unmuteCategory": "카테고리 알림 켜기",
-    "sidebar_left.sidebar_category.newDropBoxLabel": "대화방을 여기로 드래그하세요",
-    "sidebar_left.sidebar_category_menu.renameCategory": "카테고리 이름 수정",
-    "sidebar_left.sidebar_category_menu.deleteCategory": "카테고리 삭제",
-    "sidebar.show": "보기",
-    "sidebar.allDirectMessages": "전체",
-    "sidebar.sort": "정렬",
-    "sidebar.sortedByRecencyLabel": "시간순",
-    "sidebar.sortedManually": "수동",
-    "sidebar_left.sidebar_category_menu.createCategory": "카테고리 생성",
-    "sidebar_left.sidebar_channel_menu.leaveConversation": "대화방 닫기",
-    "filtered_user_list.countTotal": "총 {total, number}명 중 {count, number}명",
-    "filtered_user_list.countTotalPage": "총 {total, number}명 중 {startCount, number} - {endCount, number}명",
-    "channel_modal.name.label": "대화방 이름",
-    "channel_modal.name.placeholder": "예시: \"버그\", \"마케팅\", \"고객지원\"",
-    "url_input.buttonLabel.edit": "편집",
-    "url_input.buttonLabel.done": "완료",
-    "change_url.shorter": "URL은 최대 64자여야 합니다.",
-    "change_url.longer": "URL은 1자 이상이어야 합니다.",
-    "change_url.noSpecialChars": "URL은 소문자, 영어, -, _만 사용할 수 있습니다.",
-    "change_url.invalidDirectMessage": "URL에는 사용자 ID가 허용되지 않습니다.",
-    "widget.input.required": "필수 항목입니다.",
-    "channel_modal.name.longer": "대화방 이름은 1자 이상이어야 합니다.",
-    "channel_modal.name.shorter": "대화방 이름은 최대 64자여야 합니다.",
-    "channel_modal.type.private.title": "비공개 대화방",
-    "channel_modal.type.private.description": "초대받은 멤버만 참여할 수 있습니다",
-    "channel_modal.purpose.info": "이 대화방은 이렇게 사용되어야 합니다.",
-    "channel_modal.purpose.placeholder": "대화방 설명 (선택사항)",
-    "multiselect.numMembers": "{memberOptions, number} / {totalCount, number} 명",
-    "create_category_modal.createCategory": "카테고리 만들기",
-    "edit_category_modal.placeholder": "카테고리 이름",
-    "edit_category_modal.helpText": "대화방을 카테고리로 드래그하여 구성합니다",
-    "rename_category_modal.renameCategory": "카테고리 이름 수정",
-    "rename_category_modal.rename": "저장",
-    "delete_category_modal.deleteCategory": "카테고리를 삭제하시겠습니까 ?",
-    "delete_category_modal.helpText": "[**{category_name}**] 카테고리 안에 속한 대화방은 단체방 혹은 개인방으로 이동됩니다. 대화방은 삭제되지 않습니다.",
-    "channel_invite.no_options_message": "사용자를 찾을 수 없습니다 :("
+  "sidebar.createDirectMessage": "개인방 만들기",
+  "sidebar_left.sidebar_category.newLabel": "신규",
+  "sidebar_left.sidebar_category_menu.editCategory": "카테고리 옵션",
+  "sidebar_left.sidebar_category_menu.muteCategory": "카테고리 알림 끄기",
+  "sidebar_left.sidebar_category_menu.unmuteCategory": "카테고리 알림 켜기",
+  "sidebar_left.sidebar_category.newDropBoxLabel": "대화방을 여기로 드래그하세요",
+  "sidebar_left.sidebar_category_menu.renameCategory": "카테고리 이름 수정",
+  "sidebar_left.sidebar_category_menu.deleteCategory": "카테고리 삭제",
+  "sidebar.show": "보기",
+  "sidebar.allDirectMessages": "전체",
+  "sidebar.sort": "정렬",
+  "sidebar.sortedByRecencyLabel": "시간순",
+  "sidebar.sortedManually": "수동",
+  "sidebar_left.sidebar_category_menu.createCategory": "카테고리 생성",
+  "sidebar_left.sidebar_channel_menu.leaveConversation": "대화방 닫기",
+  "filtered_user_list.countTotal": "총 {total, number}명 중 {count, number}명",
+  "filtered_user_list.countTotalPage": "총 {total, number}명 중 {startCount, number} - {endCount, number}명",
+  "channel_modal.name.label": "대화방 이름",
+  "channel_modal.name.placeholder": "예시: \"버그\", \"마케팅\", \"고객지원\"",
+  "url_input.buttonLabel.edit": "편집",
+  "url_input.buttonLabel.done": "완료",
+  "change_url.shorter": "URL은 최대 64자여야 합니다.",
+  "change_url.longer": "URL은 1자 이상이어야 합니다.",
+  "change_url.noSpecialChars": "URL은 소문자, 영어, -, _만 사용할 수 있습니다.",
+  "change_url.invalidDirectMessage": "URL에는 사용자 ID가 허용되지 않습니다.",
+  "widget.input.required": "필수 항목입니다.",
+  "channel_modal.name.longer": "대화방 이름은 1자 이상이어야 합니다.",
+  "channel_modal.name.shorter": "대화방 이름은 최대 64자여야 합니다.",
+  "channel_modal.type.private.title": "비공개 대화방",
+  "channel_modal.type.private.description": "초대받은 멤버만 참여할 수 있습니다",
+  "channel_modal.purpose.info": "이 대화방은 이렇게 사용되어야 합니다.",
+  "channel_modal.purpose.placeholder": "대화방 설명 (선택사항)",
+  "multiselect.numMembers": "{memberOptions, number} / {totalCount, number} 명",
+  "create_category_modal.createCategory": "카테고리 만들기",
+  "edit_category_modal.placeholder": "카테고리 이름",
+  "edit_category_modal.helpText": "대화방을 카테고리로 드래그하여 구성합니다",
+  "rename_category_modal.renameCategory": "카테고리 이름 수정",
+  "rename_category_modal.rename": "저장",
+  "delete_category_modal.deleteCategory": "카테고리를 삭제하시겠습니까 ?",
+  "delete_category_modal.helpText": "[**{category_name}**] 카테고리 안에 속한 대화방은 단체방 혹은 개인방으로 이동됩니다. 대화방은 삭제되지 않습니다.",
+  "channel_invite.no_options_message": "사용자를 찾을 수 없습니다 :(",
+  "search_bar.usage.search_type_question": "무엇을 찾고 계십니까 ?",
+  "search_bar.usage.search_type_messages": "메시지",
+  "search_bar.usage.search_type_files": "파일",
+  "userGuideHelp.askTheCommunity": "커뮤니티 문의",
+  "userGuideHelp.helpResources": "도움말",
+  "userGuideHelp.reportAProblem": "문제 보고",
+  "search_bar.usage.title_messages": "메시지 검색 옵션",
+  "search_bar.usage.title_files": "파일 검색 옵션",
+  "search_list_option.from": "개인방 메시지",
+  "search_list_option.in": "단체방 메시지",
+  "search_list_option.on": "해당 날짜의 메시지",
+  "search_list_option.before": "해당 날짜 이전의 메시지",
+  "search_list_option.after": "해당 날짜 이후의 메시지",
+  "search_list_option.exclude": "검색어 제외",
+  "search_list_option.phrases": "구문으로 검색",
+  "search_files_list_option.from": "개인방 파일",
+  "search_files_list_option.in": "단체방 파일",
+  "search_files_list_option.on": "해당 날짜의 파일",
+  "search_files_list_option.before": "해당 날짜 이전의 파일",
+  "search_files_list_option.after": "해당 날짜 이후의 파일",
+  "search_files_list_option.ext": "확장자로 검색",
+  "search_files_list_option.exclude": "검색어 제외",
+  "search_files_list_option.phrases": "구문으로 검색",
+    "search_header.results": "검색 결과",
+    "search_header.title2": "최근 멘션",
+    "search_header.title3": "보관된 메시지",
+    "search_header.pinnedPosts": "고정된 메시지",
+    "search_header.channelFiles": "파일",
+    "search_bar.messages_tab": "메시지",
+    "search_bar.files_tab": "파일",
+    "search_item.thread_direct": "개인방 글타래 ({username})",
+    "search_item.thread": "단체방 글타래 ({channel})",
+    "search_item.direct": "개인방 ({username})",
+    "search_item.channel": "단체방 ({channel})",
+    "post_header.update_status": "상태 설정",
+    "post_info.dot_menu.tooltip.more": "더보기",
+    "forward_post_button.label": "전달",
+    "post_info.post_reminder.menu": "재알림",
+    "post_info.post_reminder.sub_menu.header": "재알림 설정:",
+    "post_info.post_reminder.sub_menu.custom": "사용자 지정",
+    "post_info.post_reminder.sub_menu.one_hour": "1 시간",
+    "post_info.post_reminder.sub_menu.thirty_minutes": "30 분",
+    "post_info.post_reminder.sub_menu.tomorrow": "내일",
+    "post_info.post_reminder.sub_menu.two_hours": "2 시간",
+    "post_info.copy": "메시지 복사",
+    "post_reminder.custom_time_picker_modal.header": "재알림 설정",
+    "post_reminder.custom_time_picker_modal.submit_button": "재알림",
+    "dnd_custom_time_picker_modal.date": "날짜",
+    "post_pre_header.flagged": "중요",
+    "edit_post.helper_text": "[<strong>{key}ENTER</strong>: 수정, <strong>ESC</strong>: 취소]",
+    "edit_post.action_buttons.save": "수정",
+    "edit_post.action_buttons.cancel": "취소",
+    "channel_info_rhs.menu.files.filter": "필터",
+    "channel_info_rhs.menu.files.filter.all_file_type": "모든 파일 유형",
+    "channel_info_rhs.menu.files.filter.documents": "문서",
+    "channel_info_rhs.menu.files.filter.spreadsheets": "스프레드시트",
+    "channel_info_rhs.menu.files.filter.presentations": "프레젠테이션",
+    "channel_info_rhs.menu.files.filter.code": "코드",
+    "channel_info_rhs.menu.files.filter.images": "이미지",
+    "channel_info_rhs.menu.files.filter.audio": "오디오",
+    "channel_info_rhs.menu.files.filter.videos": "비디오",
+    "no_results.channel_files_filtered.subtitle": "이 단체방에는 선택한 파일 형식의 파일이 없습니다.",
+    "no_results.channel_files_filtered.title": "파일 없음",
+    "no_results.channel_files.subtitle": "이 단체방에 게시된 파일이 여기에 표시됩니다.",
+    "no_results.channel_files.title": "파일 없음",
+    "no_results.channel_search.subtitle": "맞춤법을 체크하거나 다른 검색어로 시도하십시오.",
+    "no_results.channel_search.title": "{channelName}에 대한 검색 결과 없음",
+    "no_results.flagged_posts.subtitle": "보관된 메시지는 오직 당신만 볼 수 있습니다. {icon}을 눌러 이곳에 표시할 수 있습니다.",
+    "no_results.flagged_posts.title": "보관된 메시지 없음",
+    "no_results.mentions.subtitle": "다른 멤버가 나를 언급하거나 멘션에 등록한 단어를 포함하는 메시지는 이곳에 나타납니다.",
+    "no_results.mentions.title": "멘션 없음",
+    "no_results.pinned_posts.subtitle": "대화방에 참여한 모든 멤버가 볼 수 있습니다. 공지하기를 선택하여 이 곳에 표시할 수 있습니다.",
+    "no_results.pinned_posts.title": "고정된 메시지 없음",
+    "no_results.user_group_members.subtitle": "There are currently no members in this group, please add one.",
+    "no_results.user_group_members.title": "No members yet",
+    "no_results.user_groups.subtitle": "Groups are a custom collection of users that can be used for mentions and invites.",
+    "no_results.user_groups.title": "No groups yet",
+    "search_results.channel-files-header": "최근 파일",
+    "global_header.productSettings": "설정",
+    "status_dropdown.set_custom": "상태 설정",
+    "input.clear": "지우기",
+    "status_dropdown.dnd_sub_menu_header": "다음 기간까지 알림 비활성화:",
+    "status_dropdown.dnd_sub_menu_item.custom": "사용자 지정",
+    "status_dropdown.dnd_sub_menu_item.one_hour": "1 시간",
+    "status_dropdown.dnd_sub_menu_item.thirty_minutes": "30 분",
+    "status_dropdown.dnd_sub_menu_item.tomorrow": "내일",
+    "status_dropdown.dnd_sub_menu_item.two_hours": "2 시간",
+    "dnd_custom_time_picker_modal.defaultMsg": "다음 기간까지 알림 비활성화",
+    "dnd_custom_time_picker_modal.submitButton": "알림 비활성화",
+    "dnd_custom_time_picker_modal.time": "시간"
 }
