fix: 한글화 작업완료 ( 채팅방, editor )

--- a/webapp/channels/src/i18n/ko.json
+++ b/webapp/channels/src/i18n/ko.json
@@ -2167,25 +2167,23 @@
   "change_url.startWithLetter": "URL은 영문자나 숫자로 시작해야 합니다.",
   "channelHeader.addToFavorites": "즐겨찾기에 추가",
   "channelHeader.removeFromFavorites": "즐겨찾기에서 제거",
-  "channel_header.addChannelHeader": "채널 설명 추가하기..",
+  "channel_header.addChannelHeader": "헤더 편집...",
   "channel_header.channelHasGuests": "이 채널에는 게스트가 있습니다.",
-  "channel_header.channelMembers": "구성원",
+  "channel_header.channelMembers": "멤버",
   "channel_header.convert": "비공개 채널로 변환",
   "channel_header.delete": "채널 보관",
   "channel_header.directchannel.you": "{displayname} (당신) ",
   "channel_header.editLink": "(편집)",
   "channel_header.flagged": "보관된 메시지",
   "channel_header.groupMessageHasGuests": "이 그룹 메시지는 게스트가 있습니다.",
-  "channel_header.leave": "채널 떠나기",
-  "channel_header.manageMembers": "회원 관리",
+  "channel_header.leave": "단체방 떠나기",
+  "channel_header.manageMembers": "멤버 관리",
   "channel_header.menuAriaLabel": "채널 메뉴",
-  "channel_header.mute": "채널 알림 끄기",
-  "channel_header.pinnedPosts": "포스트 고정",
   "channel_header.recentMentions": "최근 멘션",
-  "channel_header.rename": "채널 이름 변경",
+  "channel_header.rename": "이름 변경",
   "channel_header.search": "검색",
-  "channel_header.setHeader": "채널 헤더 변경",
-  "channel_header.setPurpose": "채널 설명 변경",
+  "channel_header.setHeader": "헤더 변경",
+  "channel_header.setPurpose": "설명 변경",
   "channel_header.unarchive": "채널 보관 해제",
   "channel_header.unmute": "채널 알림 끄기",
   "channel_header.userHelpGuide": "도움말",
@@ -2198,11 +2196,11 @@
   "channel_members_dropdown.channel_admins": "채널 관리자",
   "channel_members_dropdown.channel_member": "채널 구성원",
   "channel_members_dropdown.channel_members": "채널 구성원",
-  "channel_members_dropdown.make_channel_admin": "채널 관리자로 만들기",
-  "channel_members_dropdown.make_channel_admins": "채널 관리자로 만들기",
-  "channel_members_dropdown.make_channel_member": "회원으로 만들기",
-  "channel_members_dropdown.make_channel_members": "회원으로 만들기",
-  "channel_members_dropdown.remove_from_channel": "채널에서 제거",
+  "channel_members_dropdown.make_channel_admin": "단체방 관리자로 만들기",
+  "channel_members_dropdown.make_channel_admins": "단체방 관리자로 만들기",
+  "channel_members_dropdown.make_channel_member": "멤버로 만들기",
+  "channel_members_dropdown.make_channel_members": "멤버로 만들기",
+  "channel_members_dropdown.remove_from_channel": "단체방에서 제거",
   "channel_members_modal.addNew": " 구성원 추가",
   "channel_members_modal.members": " 구성원",
   "channel_modal.cancel": "취소",
@@ -2387,14 +2385,14 @@
   "discard_changes_modal.leave": "네, 취소합니다.",
   "discard_changes_modal.message": "저장되지 않은 변경사항이 있습니다, 저장하지 않고 취소하겠습니까?",
   "discard_changes_modal.title": "변경을 취소하시겠습니까?",
-  "edit_channel_header.editHeader": ".채널 헤더 변경...",
-  "edit_channel_header.previewHeader": "헤더 편집",
+  "edit_channel_header.editHeader": "대화방 헤더 설정...",
+  "edit_channel_header.previewHeader": "헤더 설정",
   "edit_channel_header_modal.cancel": "취소",
   "edit_channel_header_modal.description": "상단 채널 이름 옆에 표시될 글자를 편집하세요.",
   "edit_channel_header_modal.error": "채널 헤더가 너무 깁니다. 더 짧은 헤더를 사용하세요.",
   "edit_channel_header_modal.save": "저장",
-  "edit_channel_header_modal.title": "{channel}의 헤더 편집",
-  "edit_channel_header_modal.title_dm": "헤더 편집",
+  "edit_channel_header_modal.title": "{channel}의 헤더 설정",
+  "edit_channel_header_modal.title_dm": "헤더 설정",
   "edit_channel_purpose_modal.body": "이 채널을 어떻게 사용해야 하는지 설명하십시오. 설명은 채널 목록의 \"더보기...\"에서 가입을 위한 도움말로 표시됩니다.",
   "edit_channel_purpose_modal.cancel": "취소",
   "edit_channel_purpose_modal.save": "저장",
@@ -2478,9 +2476,9 @@
   "filtered_channels_list.search": "채널 검색",
   "filtered_user_list.next": "다음",
   "filtered_user_list.prev": "이전",
-  "filtered_user_list.search": "사용자 검색",
+  "filtered_user_list.search": "멤버 검색",
   "filtered_user_list.team": "팀:",
-  "filtered_user_list.userStatus": "사용자 정보:",
+  "filtered_user_list.userStatus": "멤버 정보:",
   "flag_post.flag": "중요 메시지로 지정",
   "flag_post.unflag": "중요 메시지 해제",
   "full_screen_modal.back": "돌아가기",
@@ -2666,15 +2664,15 @@
   "intro_messages.anyMember": " 모든 회원이 채널에 가입하고 글을 읽을 수 있습니다.",
   "intro_messages.beginning": "{name}의 시작",
   "intro_messages.creator": "이것은 {date}에 {creator} 님이 작성한 {name} 채널의 시작입니다.",
-  "intro_messages.creatorPrivate": "{date}에 {name} 비공개 채널을 {creator} 님이 생성하였습니다.",
+  "intro_messages.creatorPrivate": "{date}에 {name} 단체방을 {creator} 님이 생성하였습니다.",
   "intro_messages.default": "{display_name}에 입장하셨습니다!\n\n모든 사람이 볼 수 있도록 메시지를 게시하세요. 모든 사람들이 팀에 가입되면 자동으로 이 채널에 가입됩니다.",
   "intro_messages.group_message": "This is the start of your direct message history with this teammate. Direct messages and files shared here are not shown to people outside this area.",
   "intro_messages.inviteOthers": "이 팀에 사용자 초대하기",
   "intro_messages.noCreator": "이것은 {date}에 생성된 {name} 채널의 시작입니다.",
   "intro_messages.noCreatorPrivate": "이것은 {date}에 생성된 {name} 비공개 채널의 시작입니다.",
-  "intro_messages.onlyInvited": " 초대 받은 회원만 이 비공개 그룹을 볼 수 있습니다.",
-  "intro_messages.purpose": " 채널의 목적: {purpose}",
-  "intro_messages.purposePrivate": " 이 비공개 채널의 목적: {purpose}",
+  "intro_messages.onlyInvited": " 초대 받은 멤버만 볼 수 있습니다.",
+  "intro_messages.purpose": " 단체방의 목적: {purpose}",
+  "intro_messages.purposePrivate": " 단체방의 목적: {purpose}",
   "intro_messages.readonly.default": "**{display_name}에 입장하셨습니다!**\n\n모든 사람이 볼 수 있도록 메시지를 게시하세요. 모든 사람들이 팀에 가입되면 자동으로 이 채널에 가입됩니다.",
   "intro_messages.setHeader": "헤더 설정",
   "intro_messages.teammate": "개인 메시지의 시작입니다. 개인 메시지와 여기서 공유된 파일들은 외부에서 보여지지 않습니다.",
@@ -2785,14 +2783,15 @@
   "modal.manual_status.auto_responder.message_dnd": "상태를 \"방해 금지\"로 전환하고 자동 회신을 비활성화 하시겠습니까?",
   "modal.manual_status.auto_responder.message_offline": "상태를 \"방해 금지\"로 전환하고 자동 회신을 비활성화 하시겠습니까?",
   "modal.manual_status.auto_responder.message_online": "상태를 \"방해 금지\"로 전환하고 자동 회신을 비활성화 하시겠습니까?",
-  "modal.manual_status.button_": "예, 상태를 \"{status}\"(으)로 설정합니다.",
+  "modal.manual_status.button_": "예, 상태를 \"{status}\"(으)로 설정",
   "modal.manual_status.button_away": "예, 상태를 \"자리 비움\"으로 설정",
-  "modal.manual_status.button_dnd": "예, 내 상태를 \"방해금지\"로 설정해주세요.",
+  "modal.manual_status.button_dnd": "예, 상태를 \"방해금지\"로 설정",
   "modal.manual_status.button_offline": "예, 상태를 \"자리 비움\"으로 설정",
   "modal.manual_status.button_online": "예, 상태를 \"온라인\"으로 설정",
-  "modal.manual_status.cancel_": "아니요, \"{status}\"로 유지합니다.",
-  "modal.manual_status.cancel_away": "아니요, \"자리 비움\"으로 상태를 유지합니다.",
-  "modal.manual_status.cancel_dnd": "아니요, \"방해 금지\"로 유지합니다.",
+  "modal.manual_status.cancel_": "아니요, \"{status}\"로 유지",
+  "modal.manual_status.cancel_away": "아니요, \"자리 비움\"으로 상태를 유지",
+  "modal.manual_status.cancel_dnd": "아니요, \"방해 금지\"로 유지",
+  "modal.manual_status.cancel_offline": "아니요, \"오프라인\"으로 유지",
   "modal.manual_status.message_": "상태를 \"{status}\"(으)로 전환 하시겠습니까?",
   "modal.manual_status.message_away": "상태를 \"자리 비움\"으로 전환 하시겠습니까?",
   "modal.manual_status.message_dnd": "상태를 \"온라인\"으로 전환 하시겠습니까?",
@@ -2831,7 +2830,7 @@
   "multiselect.selectChannels": "↑↓키로 탐색하고, ↵키로 선택합니다.",
   "multiselect.selectTeams": "↑↓키로 탐색하고, ↵키로 선택합니다.",
   "navbar.addGroups": "그룹 추가하기",
-  "navbar.addMembers": "구성원 추가",
+  "navbar.addMembers": "멤버 추가",
   "navbar.preferences": "알림 설정",
   "navbar.toggle2": "사이드바 토글",
   "navbar.viewPinnedPosts": "공지사항 보기",
@@ -2964,7 +2963,7 @@
   "rhs_header.closeTooltip.icon": "Close the sidebar icon",
   "rhs_header.collapseSidebarTooltip": "사이드바 접기",
   "rhs_header.collapseSidebarTooltip.icon": "사이드바 아이콘 접기",
-  "rhs_header.details": "Thread",
+  "rhs_header.details": "글타래",
   "rhs_header.expandSidebarTooltip": "사이드바 확장",
   "rhs_header.expandSidebarTooltip.icon": "Expand the sidebar icon",
   "rhs_root.mobile.add_reaction": "반응 추가",
@@ -3016,12 +3015,36 @@
   "shortcuts.msgs.comp.header": "자동완성",
   "shortcuts.msgs.comp.username": "유저 이름:\t@|[a-z]|Tab",
   "shortcuts.msgs.edit": "채널의 마지막 메시지 수정:\tUp",
+  "shortcuts.msgs.formatting_bar.post_priority": "메시지 우선 순위",
   "shortcuts.msgs.header": "메시지",
   "shortcuts.msgs.input.header": "빈 입력 필드 안에서의 명령어",
   "shortcuts.msgs.markdown.bold": "굵게:\tCtrl|B",
   "shortcuts.msgs.markdown.bold.mac": "굵게:\t⌘|B",
+  "shortcuts.msgs.markdown.code": "코드:\tCtrl|Alt|C",
+  "shortcuts.msgs.markdown.code.mac": "코드:\t⌘|⌥|C",
+  "shortcuts.msgs.markdown.emoji": "이모지 / Gif:\tCtrl|Alt|E",
+  "shortcuts.msgs.markdown.emoji.mac": "이모지 / Gif:\t⌘|⌥|E",
+  "shortcuts.msgs.markdown.formatting.hide": "포맷 숨기기:\tCtrl|Alt|T",
+  "shortcuts.msgs.markdown.formatting.hide.mac": "포맷 숨기기:\t⌘|⌥|T",
+  "shortcuts.msgs.markdown.formatting.show": "포맷 보이기:\tCtrl|Alt|T",
+  "shortcuts.msgs.markdown.formatting.show.mac": "포맷 보이기:\t⌘|⌥|T",
+  "shortcuts.msgs.markdown.h3": "헤더",
+  "shortcuts.msgs.markdown.h3.mac": "헤더",
+  "shortcuts.msgs.markdown.header": "포맷",
   "shortcuts.msgs.markdown.italic": "기울임꼴:\tCtrl|I",
   "shortcuts.msgs.markdown.italic.mac": "기울임꼴:\t⌘|I",
+  "shortcuts.msgs.markdown.link": "링크:\tCtrl|Alt|K",
+  "shortcuts.msgs.markdown.link.mac": "링크:\t⌘|⌥|K",
+  "shortcuts.msgs.markdown.ordered": "번호 매기기:\tShift|Alt|7",
+  "shortcuts.msgs.markdown.ordered.mac": "번호 매기기:\tShift|⌥|7",
+  "shortcuts.msgs.markdown.preview": "미리 보기 표시/숨기기:\tCtrl|Alt|P",
+  "shortcuts.msgs.markdown.preview.mac": "미리 보기 표시/숨기기:\t⌘|⌥|P",
+  "shortcuts.msgs.markdown.quote": "인용구:\tShift|Alt|9",
+  "shortcuts.msgs.markdown.quote.mac": "인용구:\tShift|⌥|9",
+  "shortcuts.msgs.markdown.strike": "취소선:\tShift|Alt|X",
+  "shortcuts.msgs.markdown.strike.mac": "취소선:\t⌘|Shift|X",
+  "shortcuts.msgs.markdown.unordered": "글머리 목록\tShift|Alt|8",
+  "shortcuts.msgs.markdown.unordered.mac": "글머리 목록:\tShift|⌥|8",
   "shortcuts.msgs.reply": "채널의 마지막 메시지에 답장 보내기:\tShift|Up",
   "shortcuts.msgs.reprint_next": "다음 메시지 재입력:\tCtrl|Down",
   "shortcuts.msgs.reprint_next.mac": "다음 메시지 재입력:\t⌘|Down",
@@ -3070,9 +3093,9 @@
   "sidebar_left.sidebar_channel_menu.addMembers": "멤버 추가",
   "sidebar_left.sidebar_channel_menu.copyLink": "링크 복사",
   "sidebar_left.sidebar_channel_menu.favoriteChannel": "즐겨찾기",
-  "sidebar_left.sidebar_channel_menu.leaveChannel": "단체방 떠나기",
-  "sidebar_left.sidebar_channel_menu.muteChannel": "단체방 알림 끄기",
-  "sidebar_left.sidebar_channel_menu.unmuteChannel": "단체방 알림 켜기",
+  "sidebar_left.sidebar_channel_menu.leaveChannel": "떠나기",
+  "sidebar_left.sidebar_channel_menu.muteChannel": "알림 끄기",
+  "sidebar_left.sidebar_channel_menu.unmuteChannel": "알림 켜기",
   "sidebar_right_menu.console": "관리자 도구",
   "sidebar_right_menu.flagged": "중요 메시지",
   "sidebar_right_menu.recentMentions": "최근 멘션",
@@ -3544,7 +3567,6 @@
   "login.cardtitle": "로그인",
   "login.logingIn": "로그인 중...",
   "widget.passwordInput.password": "비밀번호",
-  "modal.manual_status.cancel_offline": "아니요, 상태를 '오프라인'으로 유지",
   "sidebar.openDirectMessage": "개인방 만들기",
   "sidebar.types.favorites": "즐겨찾기",
   "sidebar_left.sidebar_channel_menu.markAsUnread": "안 읽음 표시",
@@ -3688,5 +3710,54 @@
     "status_dropdown.dnd_sub_menu_item.two_hours": "2 시간",
     "dnd_custom_time_picker_modal.defaultMsg": "다음 기간까지 알림 비활성화",
     "dnd_custom_time_picker_modal.submitButton": "알림 비활성화",
-    "dnd_custom_time_picker_modal.time": "시간"
+    "dnd_custom_time_picker_modal.time": "시간",
+    "channel_header.lastActive": "마지막 로그인: {timestamp}",
+    "channel_header.channelFiles": "파일",
+    "channel_header.pinnedPosts": "공지사항",
+    "channel_header.muteConversation": "알림 끄기",
+    "channel_header.mute": "알림 끄기",
+    "channel_header.setConversationHeader": "헤더 설정",
+    "channel_info_rhs.header.title": "정보",
+    "channel_info_rhs.top_buttons.favorited": "즐겨찾기 해제",
+    "channel_info_rhs.top_buttons.favorite": "즐겨찾기",
+    "channel_info_rhs.top_buttons.muted": "알림 켜기",
+    "channel_info_rhs.top_buttons.mute": "알림 끄기",
+    "channel_info_rhs.menu.files": "파일",
+    "channel_info_rhs.menu.pinned": "고정된 메시지",
+    "channel_info_rhs.menu.notification_preferences": "단체방 알림 설정",
+    "channel_info_rhs.menu.members": "멤버",
+    "channel_info_rhs.top_buttons.add_people": "멤버 추가",
+    "channel_info_rhs.top_buttons.copied": "복사 완료",
+    "channel_info_rhs.top_buttons.copy": "링크 복사",
+    "channelHeader.viewInfo": "정보 보기",
+    "channelHeader.hideInfo": "정보 닫기",
+    "channel_members_rhs.header.title": "멤버",
+    "channel_members_rhs.action_bar.manage_button": "관리",
+    "channel_members_rhs.action_bar.add_button": "추가",
+    "channel_members_rhs.action_bar.members_count_title": "{members_count} 명",
+    "channel_members_rhs.list.channel_admin_title": "단체방 관리자",
+    "channel_members_rhs.list.channel_members_title": "멤버",
+    "channel_members_rhs.action_bar.done_button": "완료",
+    "channel_members_rhs.action_bar.managing_title": "멤버 관리",
+    "channel_members_rhs.member.select_role_channel_admin": "관리자",
+    "channel_members_rhs.member.select_role_channel_member": "멤버",
+    "channel_members_rhs.member.select_role_guest": "게스트",
+    "multiselect.cancel": "취소",
+    "channel_header.closeChannelInfo": "정보 닫기",
+    "edit_channel_private_purpose_modal.body": "이 설명은 단체방의 \"정보 보기\" 탭에서 나타납니다.",
+    "intro_messages.inviteMembersToPrivateChannel.button": "멤버 추가",
+    "insights.topThreads.replies": "답장",
+    "threading.numReplies": "{totalReplies} 답장",
+    "threading.footer.lastReplyAt": "마지막 답장: {formatted}",
+    "channel_header.lastOnline": "마지막 로그인: {timestamp}",
+    "user_profile.custom_status": "상태",
+    "user_profile.custom_status.set_status": "상태 설정",
+    "user_profile.send.dm.yourself": "나에게 메시지 보내기",
+    "user_profile.account.editProfile": "계정 설정",
+    "post_priority.picker.header": "메시지 우선 순위",
+    "post_priority.priority.important": "중요",
+    "post_priority.priority.standard": "기본",
+    "post_priority.priority.urgent": "긴급",
+    "channel_info_rhs.about_area.add_channel_header": "헤더 편집...",
+    "channel_info_rhs.about_area.add_channel_purpose": "설명 편집..."
 }
