--- a/webapp/channels/src/i18n/ko.json
+++ b/webapp/channels/src/i18n/ko.json
@@ -635,7 +635,7 @@
   "admin.data_grid.paginatorCount": "{total, number} 의 {startCount, number} - {endCount, number}",
   "admin.data_retention.createJob.title": "삭제 작업 지금 실행",
   "admin.data_retention.customPolicies.addPolicy": "정책 추가",
-  "admin.data_retention.customPolicies.subTitle": "특정 팀과 채널의 메세지 보관 기간을 지정합니다.",
+  "admin.data_retention.customPolicies.subTitle": "특정 팀과 채널의 메시지 보관 기간을 지정합니다.",
   "admin.data_retention.title": "데이터 보존 정책",
   "admin.database.title": "데이터베이스",
   "admin.developer.title": "개발자 설정",
@@ -1246,7 +1246,7 @@
   "admin.permissions.group.guest_delete_post.description": "작성자는 자신의 게시글을 삭제할 수 있습니다.",
   "admin.permissions.group.guest_delete_post.name": "자신의 메시지를 삭제",
   "admin.permissions.group.guest_edit_post.description": "메시지를 올린 후 {editTimeLimitButton}, 사용자는 자신의 메시지를 편집 할 수 있습니다.",
-  "admin.permissions.group.guest_edit_post.name": "자신의 메세지를 편집",
+  "admin.permissions.group.guest_edit_post.name": "자신의 메시지를 편집",
   "admin.permissions.group.guest_reactions.description": "메시지에 반응을 추가하거나 삭제합니다.",
   "admin.permissions.group.guest_reactions.name": "메시지 리액션",
   "admin.permissions.group.guest_use_channel_mentions.description": "@all, @channel 및 @here로 채널의 모든 구성원에게 알림",
@@ -1319,7 +1319,7 @@
   "admin.permissions.permission.edit_others_posts.description": "사용자가 다른 사용자의 메시지를 편집할 수 있도록 허용합니다.",
   "admin.permissions.permission.edit_others_posts.name": "다른 사용자의 메시지를 편집",
   "admin.permissions.permission.edit_post.description": "메시지를 올린 후 {editTimeLimitButton}, 사용자는 자신의 메시지를 편집 할 수 있습니다.",
-  "admin.permissions.permission.edit_post.name": "자신의 메세지를 편집",
+  "admin.permissions.permission.edit_post.name": "자신의 메시지를 편집",
   "admin.permissions.permission.import_team.description": "팀 가져오기",
   "admin.permissions.permission.import_team.name": "팀 가져오기",
   "admin.permissions.permission.invite_guest.description": "게스트를 채널에 초대하고 이메일 초대를 보냅니다.",
@@ -2882,9 +2882,9 @@
   "permalink.show_dialog_warn.join": "참여",
   "permalink.show_dialog_warn.title": "개인 채널에 연결하기",
   "post.ariaLabel.attachmentMultiple": ", {attachmentCount}의 첨부 파일",
-  "post.ariaLabel.messageIsFlagged": ", 메세지 고정됨",
+  "post.ariaLabel.messageIsFlagged": ", 메시지 고정됨",
   "post.ariaLabel.messageIsFlaggedAndPinned": ", message is flagged and pinned",
-  "post.ariaLabel.messageIsPinned": ", 메세지 고정됨",
+  "post.ariaLabel.messageIsPinned": ", 메시지 고정됨",
   "post.ariaLabel.reaction": ", 1개의 리액션",
   "post_body.check_for_out_of_channel_mentions.link.and": " 그리고 ",
   "post_body.check_for_out_of_channel_mentions.link.private": "팀에 사용자 초대하기",
@@ -2913,10 +2913,10 @@
   "post_info.unread": "안 읽음 표시",
   "post_message_view.edited": "(수정됨)",
   "post_pre_header.pinned": "공지사항",
-  "postlist.toast.newMessages": "{count, number} new {count, plural, one {message} other {messages}}",
-  "postlist.toast.newMessagesSince": "{count, number} new {count, plural, one {message} other {messages}} since {date} at {time}",
+  "postlist.toast.newMessages": "새 메시지 {count, number} 개",
+  "postlist.toast.newMessagesSince": "{date} at {time} 이후 새 메시지 {count, number} 개",
   "postlist.toast.scrollToBottom": "최근 메시지로 이동",
-  "postlist.toast.scrollToLatest": "최근 메세지로 이동",
+  "postlist.toast.scrollToLatest": "최근 메시지로 이동",
   "posts_view.loadMore": "메시지 더 보기",
   "posts_view.newMsg": "새로운 메시지",
   "pricing_modal.briefing.unlimitedPlaybookRuns": "무제한 플레이북과 실행",
@@ -3644,120 +3644,120 @@
   "search_files_list_option.ext": "확장자로 검색",
   "search_files_list_option.exclude": "검색어 제외",
   "search_files_list_option.phrases": "구문으로 검색",
-    "search_header.results": "검색 결과",
-    "search_header.title2": "최근 멘션",
-    "search_header.title3": "보관된 메시지",
-    "search_header.pinnedPosts": "고정된 메시지",
-    "search_header.channelFiles": "파일",
-    "search_bar.messages_tab": "메시지",
-    "search_bar.files_tab": "파일",
-    "search_item.thread_direct": "개인방 글타래 ({username})",
-    "search_item.thread": "단체방 글타래 ({channel})",
-    "search_item.direct": "개인방 ({username})",
-    "search_item.channel": "단체방 ({channel})",
-    "post_header.update_status": "상태 설정",
-    "post_info.dot_menu.tooltip.more": "더보기",
-    "forward_post_button.label": "전달",
-    "post_info.post_reminder.menu": "재알림",
-    "post_info.post_reminder.sub_menu.header": "재알림 설정:",
-    "post_info.post_reminder.sub_menu.custom": "사용자 지정",
-    "post_info.post_reminder.sub_menu.one_hour": "1 시간",
-    "post_info.post_reminder.sub_menu.thirty_minutes": "30 분",
-    "post_info.post_reminder.sub_menu.tomorrow": "내일",
-    "post_info.post_reminder.sub_menu.two_hours": "2 시간",
-    "post_info.copy": "메시지 복사",
-    "post_reminder.custom_time_picker_modal.header": "재알림 설정",
-    "post_reminder.custom_time_picker_modal.submit_button": "재알림",
-    "dnd_custom_time_picker_modal.date": "날짜",
-    "post_pre_header.flagged": "중요",
-    "edit_post.helper_text": "[<strong>{key}ENTER</strong>: 수정, <strong>ESC</strong>: 취소]",
-    "edit_post.action_buttons.save": "수정",
-    "edit_post.action_buttons.cancel": "취소",
-    "channel_info_rhs.menu.files.filter": "필터",
-    "channel_info_rhs.menu.files.filter.all_file_type": "모든 파일 유형",
-    "channel_info_rhs.menu.files.filter.documents": "문서",
-    "channel_info_rhs.menu.files.filter.spreadsheets": "스프레드시트",
-    "channel_info_rhs.menu.files.filter.presentations": "프레젠테이션",
-    "channel_info_rhs.menu.files.filter.code": "코드",
-    "channel_info_rhs.menu.files.filter.images": "이미지",
-    "channel_info_rhs.menu.files.filter.audio": "오디오",
-    "channel_info_rhs.menu.files.filter.videos": "비디오",
-    "no_results.channel_files_filtered.subtitle": "이 단체방에는 선택한 파일 형식의 파일이 없습니다.",
-    "no_results.channel_files_filtered.title": "파일 없음",
-    "no_results.channel_files.subtitle": "이 단체방에 게시된 파일이 여기에 표시됩니다.",
-    "no_results.channel_files.title": "파일 없음",
-    "no_results.channel_search.subtitle": "맞춤법을 체크하거나 다른 검색어로 시도하십시오.",
-    "no_results.channel_search.title": "{channelName}에 대한 검색 결과 없음",
-    "no_results.flagged_posts.subtitle": "보관된 메시지는 오직 당신만 볼 수 있습니다. {icon}을 눌러 이곳에 표시할 수 있습니다.",
-    "no_results.flagged_posts.title": "보관된 메시지 없음",
-    "no_results.mentions.subtitle": "다른 멤버가 나를 언급하거나 멘션에 등록한 단어를 포함하는 메시지는 이곳에 나타납니다.",
-    "no_results.mentions.title": "멘션 없음",
-    "no_results.pinned_posts.subtitle": "대화방에 참여한 모든 멤버가 볼 수 있습니다. 공지하기를 선택하여 이 곳에 표시할 수 있습니다.",
-    "no_results.pinned_posts.title": "고정된 메시지 없음",
-    "no_results.user_group_members.subtitle": "There are currently no members in this group, please add one.",
-    "no_results.user_group_members.title": "No members yet",
-    "no_results.user_groups.subtitle": "Groups are a custom collection of users that can be used for mentions and invites.",
-    "no_results.user_groups.title": "No groups yet",
-    "search_results.channel-files-header": "최근 파일",
-    "global_header.productSettings": "설정",
-    "status_dropdown.set_custom": "상태 설정",
-    "input.clear": "지우기",
-    "status_dropdown.dnd_sub_menu_header": "다음 기간까지 알림 비활성화:",
-    "status_dropdown.dnd_sub_menu_item.custom": "사용자 지정",
-    "status_dropdown.dnd_sub_menu_item.one_hour": "1 시간",
-    "status_dropdown.dnd_sub_menu_item.thirty_minutes": "30 분",
-    "status_dropdown.dnd_sub_menu_item.tomorrow": "내일",
-    "status_dropdown.dnd_sub_menu_item.two_hours": "2 시간",
-    "dnd_custom_time_picker_modal.defaultMsg": "다음 기간까지 알림 비활성화",
-    "dnd_custom_time_picker_modal.submitButton": "알림 비활성화",
-    "dnd_custom_time_picker_modal.time": "시간",
-    "channel_header.lastActive": "마지막 로그인: {timestamp}",
-    "channel_header.channelFiles": "파일",
-    "channel_header.pinnedPosts": "공지사항",
-    "channel_header.muteConversation": "알림 끄기",
-    "channel_header.mute": "알림 끄기",
-    "channel_header.setConversationHeader": "헤더 설정",
-    "channel_info_rhs.header.title": "정보",
-    "channel_info_rhs.top_buttons.favorited": "즐겨찾기 해제",
-    "channel_info_rhs.top_buttons.favorite": "즐겨찾기",
-    "channel_info_rhs.top_buttons.muted": "알림 켜기",
-    "channel_info_rhs.top_buttons.mute": "알림 끄기",
-    "channel_info_rhs.menu.files": "파일",
-    "channel_info_rhs.menu.pinned": "고정된 메시지",
-    "channel_info_rhs.menu.notification_preferences": "단체방 알림 설정",
-    "channel_info_rhs.menu.members": "멤버",
-    "channel_info_rhs.top_buttons.add_people": "멤버 추가",
-    "channel_info_rhs.top_buttons.copied": "복사 완료",
-    "channel_info_rhs.top_buttons.copy": "링크 복사",
-    "channelHeader.viewInfo": "정보 보기",
-    "channelHeader.hideInfo": "정보 닫기",
-    "channel_members_rhs.header.title": "멤버",
-    "channel_members_rhs.action_bar.manage_button": "관리",
-    "channel_members_rhs.action_bar.add_button": "추가",
-    "channel_members_rhs.action_bar.members_count_title": "{members_count} 명",
-    "channel_members_rhs.list.channel_admin_title": "단체방 관리자",
-    "channel_members_rhs.list.channel_members_title": "멤버",
-    "channel_members_rhs.action_bar.done_button": "완료",
-    "channel_members_rhs.action_bar.managing_title": "멤버 관리",
-    "channel_members_rhs.member.select_role_channel_admin": "관리자",
-    "channel_members_rhs.member.select_role_channel_member": "멤버",
-    "channel_members_rhs.member.select_role_guest": "게스트",
-    "multiselect.cancel": "취소",
-    "channel_header.closeChannelInfo": "정보 닫기",
-    "edit_channel_private_purpose_modal.body": "이 설명은 단체방의 \"정보 보기\" 탭에서 나타납니다.",
-    "intro_messages.inviteMembersToPrivateChannel.button": "멤버 추가",
-    "insights.topThreads.replies": "답장",
-    "threading.numReplies": "{totalReplies} 답장",
-    "threading.footer.lastReplyAt": "마지막 답장: {formatted}",
-    "channel_header.lastOnline": "마지막 로그인: {timestamp}",
-    "user_profile.custom_status": "상태",
-    "user_profile.custom_status.set_status": "상태 설정",
-    "user_profile.send.dm.yourself": "나에게 메시지 보내기",
-    "user_profile.account.editProfile": "계정 설정",
-    "post_priority.picker.header": "메시지 우선 순위",
-    "post_priority.priority.important": "중요",
-    "post_priority.priority.standard": "기본",
-    "post_priority.priority.urgent": "긴급",
-    "channel_info_rhs.about_area.add_channel_header": "헤더 편집...",
-    "channel_info_rhs.about_area.add_channel_purpose": "설명 편집..."
+  "search_header.results": "검색 결과",
+  "search_header.title2": "최근 멘션",
+  "search_header.title3": "보관된 메시지",
+  "search_header.pinnedPosts": "고정된 메시지",
+  "search_header.channelFiles": "파일",
+  "search_bar.messages_tab": "메시지",
+  "search_bar.files_tab": "파일",
+  "search_item.thread_direct": "개인방 글타래 ({username})",
+  "search_item.thread": "단체방 글타래 ({channel})",
+  "search_item.direct": "개인방 ({username})",
+  "search_item.channel": "단체방 ({channel})",
+  "post_header.update_status": "상태 설정",
+  "post_info.dot_menu.tooltip.more": "더보기",
+  "forward_post_button.label": "전달",
+  "post_info.post_reminder.menu": "재알림",
+  "post_info.post_reminder.sub_menu.header": "재알림 설정:",
+  "post_info.post_reminder.sub_menu.custom": "사용자 지정",
+  "post_info.post_reminder.sub_menu.one_hour": "1 시간",
+  "post_info.post_reminder.sub_menu.thirty_minutes": "30 분",
+  "post_info.post_reminder.sub_menu.tomorrow": "내일",
+  "post_info.post_reminder.sub_menu.two_hours": "2 시간",
+  "post_info.copy": "메시지 복사",
+  "post_reminder.custom_time_picker_modal.header": "재알림 설정",
+  "post_reminder.custom_time_picker_modal.submit_button": "재알림",
+  "dnd_custom_time_picker_modal.date": "날짜",
+  "post_pre_header.flagged": "중요",
+  "edit_post.helper_text": "[<strong>{key}ENTER</strong>: 수정, <strong>ESC</strong>: 취소]",
+  "edit_post.action_buttons.save": "수정",
+  "edit_post.action_buttons.cancel": "취소",
+  "channel_info_rhs.menu.files.filter": "필터",
+  "channel_info_rhs.menu.files.filter.all_file_type": "모든 파일 유형",
+  "channel_info_rhs.menu.files.filter.documents": "문서",
+  "channel_info_rhs.menu.files.filter.spreadsheets": "스프레드시트",
+  "channel_info_rhs.menu.files.filter.presentations": "프레젠테이션",
+  "channel_info_rhs.menu.files.filter.code": "코드",
+  "channel_info_rhs.menu.files.filter.images": "이미지",
+  "channel_info_rhs.menu.files.filter.audio": "오디오",
+  "channel_info_rhs.menu.files.filter.videos": "비디오",
+  "no_results.channel_files_filtered.subtitle": "이 단체방에는 선택한 파일 형식의 파일이 없습니다.",
+  "no_results.channel_files_filtered.title": "파일 없음",
+  "no_results.channel_files.subtitle": "이 단체방에 게시된 파일이 여기에 표시됩니다.",
+  "no_results.channel_files.title": "파일 없음",
+  "no_results.channel_search.subtitle": "맞춤법을 체크하거나 다른 검색어로 시도하십시오.",
+  "no_results.channel_search.title": "{channelName}에 대한 검색 결과 없음",
+  "no_results.flagged_posts.subtitle": "보관된 메시지는 오직 당신만 볼 수 있습니다. {icon}을 눌러 이곳에 표시할 수 있습니다.",
+  "no_results.flagged_posts.title": "보관된 메시지 없음",
+  "no_results.mentions.subtitle": "다른 멤버가 나를 언급하거나 멘션에 등록한 단어를 포함하는 메시지는 이곳에 나타납니다.",
+  "no_results.mentions.title": "멘션 없음",
+  "no_results.pinned_posts.subtitle": "대화방에 참여한 모든 멤버가 볼 수 있습니다. 공지하기를 선택하여 이 곳에 표시할 수 있습니다.",
+  "no_results.pinned_posts.title": "고정된 메시지 없음",
+  "no_results.user_group_members.subtitle": "There are currently no members in this group, please add one.",
+  "no_results.user_group_members.title": "No members yet",
+  "no_results.user_groups.subtitle": "Groups are a custom collection of users that can be used for mentions and invites.",
+  "no_results.user_groups.title": "No groups yet",
+  "search_results.channel-files-header": "최근 파일",
+  "global_header.productSettings": "설정",
+  "status_dropdown.set_custom": "상태 설정",
+  "input.clear": "지우기",
+  "status_dropdown.dnd_sub_menu_header": "다음 기간까지 알림 비활성화:",
+  "status_dropdown.dnd_sub_menu_item.custom": "사용자 지정",
+  "status_dropdown.dnd_sub_menu_item.one_hour": "1 시간",
+  "status_dropdown.dnd_sub_menu_item.thirty_minutes": "30 분",
+  "status_dropdown.dnd_sub_menu_item.tomorrow": "내일",
+  "status_dropdown.dnd_sub_menu_item.two_hours": "2 시간",
+  "dnd_custom_time_picker_modal.defaultMsg": "다음 기간까지 알림 비활성화",
+  "dnd_custom_time_picker_modal.submitButton": "알림 비활성화",
+  "dnd_custom_time_picker_modal.time": "시간",
+  "channel_header.lastActive": "마지막 로그인: {timestamp}",
+  "channel_header.channelFiles": "파일",
+  "channel_header.pinnedPosts": "공지사항",
+  "channel_header.muteConversation": "알림 끄기",
+  "channel_header.mute": "알림 끄기",
+  "channel_header.setConversationHeader": "헤더 설정",
+  "channel_info_rhs.header.title": "정보",
+  "channel_info_rhs.top_buttons.favorited": "즐겨찾기 해제",
+  "channel_info_rhs.top_buttons.favorite": "즐겨찾기",
+  "channel_info_rhs.top_buttons.muted": "알림 켜기",
+  "channel_info_rhs.top_buttons.mute": "알림 끄기",
+  "channel_info_rhs.menu.files": "파일",
+  "channel_info_rhs.menu.pinned": "고정된 메시지",
+  "channel_info_rhs.menu.notification_preferences": "단체방 알림 설정",
+  "channel_info_rhs.menu.members": "멤버",
+  "channel_info_rhs.top_buttons.add_people": "멤버 추가",
+  "channel_info_rhs.top_buttons.copied": "복사 완료",
+  "channel_info_rhs.top_buttons.copy": "링크 복사",
+  "channelHeader.viewInfo": "정보 보기",
+  "channelHeader.hideInfo": "정보 닫기",
+  "channel_members_rhs.header.title": "멤버",
+  "channel_members_rhs.action_bar.manage_button": "관리",
+  "channel_members_rhs.action_bar.add_button": "추가",
+  "channel_members_rhs.action_bar.members_count_title": "{members_count} 명",
+  "channel_members_rhs.list.channel_admin_title": "단체방 관리자",
+  "channel_members_rhs.list.channel_members_title": "멤버",
+  "channel_members_rhs.action_bar.done_button": "완료",
+  "channel_members_rhs.action_bar.managing_title": "멤버 관리",
+  "channel_members_rhs.member.select_role_channel_admin": "관리자",
+  "channel_members_rhs.member.select_role_channel_member": "멤버",
+  "channel_members_rhs.member.select_role_guest": "게스트",
+  "multiselect.cancel": "취소",
+  "channel_header.closeChannelInfo": "정보 닫기",
+  "edit_channel_private_purpose_modal.body": "이 설명은 단체방의 \"정보 보기\" 탭에서 나타납니다.",
+  "intro_messages.inviteMembersToPrivateChannel.button": "멤버 추가",
+  "insights.topThreads.replies": "답장",
+  "threading.numReplies": "{totalReplies} 답장",
+  "threading.footer.lastReplyAt": "마지막 답장: {formatted}",
+  "channel_header.lastOnline": "마지막 로그인: {timestamp}",
+  "user_profile.custom_status": "상태",
+  "user_profile.custom_status.set_status": "상태 설정",
+  "user_profile.send.dm.yourself": "나에게 메시지 보내기",
+  "user_profile.account.editProfile": "계정 설정",
+  "post_priority.picker.header": "메시지 우선 순위",
+  "post_priority.priority.important": "중요",
+  "post_priority.priority.standard": "기본",
+  "post_priority.priority.urgent": "긴급",
+  "channel_info_rhs.about_area.add_channel_header": "헤더 편집...",
+  "channel_info_rhs.about_area.add_channel_purpose": "설명 편집..."
 }
